# ChatbotAI-LLM

./: README.md  contoh-telkom.py  contoh.py  crawl.py  knowledge_base.xlsx  knowledge_base_manager.py  main.py  price_researcher.py  pyproject.toml  scan_null.py  test_knowledge_base.xlsx  test_scraper.py
debug/: tokopedia_search.html
